[package]
name = "cliffhanger_watcher"
version = "0.1.0"
authors = ["vscode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
serde_json = "1.0"
tokio = "0.2.0"
twilio = "1.0.0"
